--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.2.41'
+    ext.appcompat_version = '27.1.1'
+    ext.constraint_layout_version = '1.1.0'
+    ext.room_version = '1.1.0-rc1'
+    ext.rxjava_version = '2.1.3'
+    ext.rxandroid_version = '2.0.1'
+
     repositories {
         google()
         jcenter()
