--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$appcompat_version"
     implementation "com.android.support:design:$appcompat_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
     //room
     implementation "android.arch.persistence.room:runtime:$room_version"
@@ -34,8 +35,8 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     // RXJava
-    implementation "io.reactivex.rxjava2:rxjava:2.1.3"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
