--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.build_gradle_version = '3.3.0-alpha08'
+    ext.kotlin_version = '1.2.60'
     ext.appcompat_version = '27.1.1'
-    ext.constraint_layout_version = '1.1.0'
-    ext.room_version = '1.1.0-rc1'
-    ext.rxjava_version = '2.1.3'
+    ext.constraint_layout_version = '1.1.3'
+    ext.room_version = '1.1.1'
+    ext.lifecycle_version = '1.1.1'
+    ext.rxjava_version = '2.1.5'
     ext.rxandroid_version = '2.0.1'
 
     repositories {
@@ -13,7 +15,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "com.android.tools.build:gradle:$build_gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
