--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.dagger_version = '2.16'
     ext.build_gradle_version = '3.3.0-alpha08'
     ext.kotlin_version = '1.2.60'
     ext.appcompat_version = '27.1.1'
