--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ buildscript {
     ext.lifecycle_version = '1.1.1'
     ext.rxjava_version = '2.1.5'
     ext.rxandroid_version = '2.0.2'
+    ext.recyclerview_version = '27.1.1'
+    ext.timber_version = '1.5.1'
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$build_gradle_version"
