--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext.dagger_version = '2.16'
-    ext.build_gradle_version = '3.3.0-alpha08'
-    ext.kotlin_version = '1.2.71'
+    ext.build_gradle_version = '3.2.1'
+    ext.kotlin_version = '1.3.10'
     ext.appcompat_version = '27.1.1'
     ext.constraint_layout_version = '1.1.3'
     ext.room_version = '1.1.1'
@@ -23,7 +23,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$build_gradle_version"
+        classpath "com.android.tools.build:gradle:3.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
