--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,33 @@ android {
 }
 
 dependencies {
+    def android_appcompat_version = '1.0.2'
+    def android_material_material_version = '1.1.0-alpha01'
+    def android_support_library_version = '1.0.0'
+    def lifecycle_version = '2.0.0'
+    def constraint_layout_version = '2.0.0-alpha2'
+
+    def rxjava_version = '2.1.5'
+    def kotlin_version = '1.3.10'
+    def dagger_version = '2.16'
+    def room_version = '2.1.0-alpha02'
+    def rxandroid_version = '2.1.0'
+    def timber_version = '1.5.1'
+    def joda_time_version = '2.10'
+    def stetho_version = '1.5.0'
+    def leakcanary_android_version = '1.6.1'
+    def calendar_view = '1.4.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$android_appcompat_version"
+    implementation "com.google.android.material:material:$android_material_material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.recyclerview:recyclerview:$android_support_library_version"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:$android_support_library_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
     //Dagger 2
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -37,9 +57,9 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     //room
-    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha02'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha02'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // RXJava
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
