--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,10 @@ dependencies {
     def lifecycle_version = '2.0.0'
     def constraint_layout_version = '2.0.0-alpha3'
 
-    def rxjava_version = '2.1.5'
     def kotlin_version = '1.3.10'
+    def kotlin_coroutines_version = '1.1.1'
     def dagger_version = '2.16'
     def room_version = '2.1.0-alpha03'
-    def rxandroid_version = '2.1.0'
     def timber_version = '1.5.1'
     def joda_time_version = '2.10'
     def stetho_version = '1.5.0'
@@ -41,7 +40,11 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+
+    //Android
     implementation "androidx.appcompat:appcompat:$android_appcompat_version"
     implementation "com.google.android.material:material:$android_material_material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
@@ -60,10 +63,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
-    // RXJava
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
 
     //Tibmer
     implementation "com.github.ajalt:timberkt:$timber_version"
